src/parser/exprParser.java
// Generated from expr.g4 by ANTLR 4.9.2

package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class exprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		INTEGERCONSTANT=46, STRINGCONSTANT=47, ID=48, BOPERATOR=49, WS=50;
	public static final int
		RULE_program = 0, RULE_expr = 1, RULE_rulelse = 2, RULE_expr0 = 3, RULE_expr0bis = 4, 
		RULE_expr1 = 5, RULE_expr1bis = 6, RULE_expr2 = 7, RULE_expr2bis = 8, 
		RULE_expr3 = 9, RULE_expr3bis = 10, RULE_expr4 = 11, RULE_expr4bis = 12, 
		RULE_expr5 = 13, RULE_function = 14, RULE_types = 15, RULE_exprnegation = 16, 
		RULE_commentaire = 17, RULE_exprseq = 18, RULE_exprseqbis = 19, RULE_exprlist = 20, 
		RULE_exprlistbis = 21, RULE_fieldlist = 22, RULE_field = 23, RULE_fieldlistbis = 24, 
		RULE_idcall = 25, RULE_lvaluebis = 26, RULE_declaration = 27, RULE_typedeclaration = 28, 
		RULE_type = 29, RULE_typefields = 30, RULE_typefieldsbis = 31, RULE_typefield = 32, 
		RULE_typepredefined = 33, RULE_typeid = 34, RULE_variabledeclaration = 35, 
		RULE_variabledeclarationbis = 36, RULE_functiondeclaration = 37, RULE_functiondeclarationbis = 38, 
		RULE_print = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expr", "rulelse", "expr0", "expr0bis", "expr1", "expr1bis", 
			"expr2", "expr2bis", "expr3", "expr3bis", "expr4", "expr4bis", "expr5", 
			"function", "types", "exprnegation", "commentaire", "exprseq", "exprseqbis", 
			"exprlist", "exprlistbis", "fieldlist", "field", "fieldlistbis", "idcall", 
			"lvaluebis", "declaration", "typedeclaration", "type", "typefields", 
			"typefieldsbis", "typefield", "typepredefined", "typeid", "variabledeclaration", 
			"variabledeclarationbis", "functiondeclaration", "functiondeclarationbis", 
			"print"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "'while'", "'do'", "'for'", "':='", "'to'", "'break'", 
			"'let'", "'in'", "'end'", "'else'", "'|'", "'&'", "'='", "'<>'", "'>'", 
			"'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'nil'", "'('", "')'", 
			"'['", "']'", "'of'", "'{'", "'}'", "'/*'", "'*/'", "';'", "','", "'.'", 
			"'type'", "'array of'", "':'", "'int'", "'string'", "'var'", "'function'", 
			"'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "INTEGERCONSTANT", 
			"STRINGCONSTANT", "ID", "BOPERATOR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public exprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(80);
			expr();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expr0Context expr0() {
			return getRuleContext(Expr0Context.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public RulelseContext rulelse() {
			return getRuleContext(RulelseContext.class,0);
		}
		public TerminalNode ID() { return getToken(exprParser.ID, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ExprseqContext exprseq() {
			return getRuleContext(ExprseqContext.class,0);
		}
		public CommentaireContext commentaire() {
			return getRuleContext(CommentaireContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__21:
			case T__24:
			case T__25:
			case T__37:
			case INTEGERCONSTANT:
			case STRINGCONSTANT:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				expr0();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(T__0);
				setState(84);
				expr();
				setState(85);
				match(T__1);
				setState(86);
				expr();
				setState(87);
				rulelse();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				match(T__2);
				setState(90);
				expr();
				setState(91);
				match(T__3);
				setState(92);
				expr();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				match(T__4);
				setState(95);
				match(ID);
				setState(96);
				match(T__5);
				setState(97);
				expr();
				setState(98);
				match(T__6);
				setState(99);
				expr();
				setState(100);
				match(T__3);
				setState(101);
				expr();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(103);
				match(T__7);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 6);
				{
				setState(104);
				match(T__8);
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(105);
					declaration();
					}
					}
					setState(108); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__37) | (1L << T__42) | (1L << T__43))) != 0) );
				setState(110);
				match(T__9);
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__21) | (1L << T__24) | (1L << T__25) | (1L << T__32) | (1L << T__37) | (1L << T__44) | (1L << INTEGERCONSTANT) | (1L << STRINGCONSTANT) | (1L << ID))) != 0)) {
					{
					setState(111);
					exprseq();
					}
				}

				setState(114);
				match(T__10);
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				commentaire();
				}
				break;
			case T__44:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				print();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulelseContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RulelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulelse; }
	}

	public final RulelseContext rulelse() throws RecognitionException {
		RulelseContext _localctx = new RulelseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rulelse);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__11);
				setState(121);
				expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr0Context extends ParserRuleContext {
		public Expr1Context expr1() {
			return getRuleContext(Expr1Context.class,0);
		}
		public Expr0bisContext expr0bis() {
			return getRuleContext(Expr0bisContext.class,0);
		}
		public Expr0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr0; }
	}

	public final Expr0Context expr0() throws RecognitionException {
		Expr0Context _localctx = new Expr0Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr0);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			expr1();
			setState(126);
			expr0bis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr0bisContext extends ParserRuleContext {
		public Expr0Context expr0() {
			return getRuleContext(Expr0Context.class,0);
		}
		public Expr0bisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr0bis; }
	}

	public final Expr0bisContext expr0bis() throws RecognitionException {
		Expr0bisContext _localctx = new Expr0bisContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr0bis);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(T__12);
				setState(129);
				expr0();
				}
				break;
			case EOF:
			case T__1:
			case T__3:
			case T__6:
			case T__9:
			case T__10:
			case T__11:
			case T__26:
			case T__28:
			case T__31:
			case T__34:
			case T__35:
			case T__37:
			case T__42:
			case T__43:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr1Context extends ParserRuleContext {
		public Expr2Context expr2() {
			return getRuleContext(Expr2Context.class,0);
		}
		public Expr1bisContext expr1bis() {
			return getRuleContext(Expr1bisContext.class,0);
		}
		public Expr1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr1; }
	}

	public final Expr1Context expr1() throws RecognitionException {
		Expr1Context _localctx = new Expr1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_expr1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			expr2();
			setState(134);
			expr1bis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr1bisContext extends ParserRuleContext {
		public Expr1Context expr1() {
			return getRuleContext(Expr1Context.class,0);
		}
		public Expr1bisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr1bis; }
	}

	public final Expr1bisContext expr1bis() throws RecognitionException {
		Expr1bisContext _localctx = new Expr1bisContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr1bis);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				match(T__13);
				setState(137);
				expr1();
				}
				break;
			case EOF:
			case T__1:
			case T__3:
			case T__6:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__26:
			case T__28:
			case T__31:
			case T__34:
			case T__35:
			case T__37:
			case T__42:
			case T__43:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr2Context extends ParserRuleContext {
		public Expr3Context expr3() {
			return getRuleContext(Expr3Context.class,0);
		}
		public Expr2bisContext expr2bis() {
			return getRuleContext(Expr2bisContext.class,0);
		}
		public Expr2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr2; }
	}

	public final Expr2Context expr2() throws RecognitionException {
		Expr2Context _localctx = new Expr2Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_expr2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			expr3();
			setState(142);
			expr2bis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr2bisContext extends ParserRuleContext {
		public Expr2Context expr2() {
			return getRuleContext(Expr2Context.class,0);
		}
		public Expr2bisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr2bis; }
	}

	public final Expr2bisContext expr2bis() throws RecognitionException {
		Expr2bisContext _localctx = new Expr2bisContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_expr2bis);
		int _la;
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(145);
				expr2();
				}
				break;
			case EOF:
			case T__1:
			case T__3:
			case T__6:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__26:
			case T__28:
			case T__31:
			case T__34:
			case T__35:
			case T__37:
			case T__42:
			case T__43:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr3Context extends ParserRuleContext {
		public Expr4Context expr4() {
			return getRuleContext(Expr4Context.class,0);
		}
		public Expr3bisContext expr3bis() {
			return getRuleContext(Expr3bisContext.class,0);
		}
		public Expr3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr3; }
	}

	public final Expr3Context expr3() throws RecognitionException {
		Expr3Context _localctx = new Expr3Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr3);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			expr4();
			setState(150);
			expr3bis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr3bisContext extends ParserRuleContext {
		public Expr3Context expr3() {
			return getRuleContext(Expr3Context.class,0);
		}
		public Expr3bisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr3bis; }
	}

	public final Expr3bisContext expr3bis() throws RecognitionException {
		Expr3bisContext _localctx = new Expr3bisContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr3bis);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
			case T__21:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				_la = _input.LA(1);
				if ( !(_la==T__20 || _la==T__21) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(153);
				expr3();
				}
				break;
			case EOF:
			case T__1:
			case T__3:
			case T__6:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__26:
			case T__28:
			case T__31:
			case T__34:
			case T__35:
			case T__37:
			case T__42:
			case T__43:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr4Context extends ParserRuleContext {
		public Expr5Context expr5() {
			return getRuleContext(Expr5Context.class,0);
		}
		public Expr4bisContext expr4bis() {
			return getRuleContext(Expr4bisContext.class,0);
		}
		public Expr4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr4; }
	}

	public final Expr4Context expr4() throws RecognitionException {
		Expr4Context _localctx = new Expr4Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr4);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			expr5();
			setState(158);
			expr4bis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr4bisContext extends ParserRuleContext {
		public Expr4Context expr4() {
			return getRuleContext(Expr4Context.class,0);
		}
		public Expr4bisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr4bis; }
	}

	public final Expr4bisContext expr4bis() throws RecognitionException {
		Expr4bisContext _localctx = new Expr4bisContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_expr4bis);
		int _la;
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__22:
			case T__23:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				_la = _input.LA(1);
				if ( !(_la==T__22 || _la==T__23) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(161);
				expr4();
				}
				break;
			case EOF:
			case T__1:
			case T__3:
			case T__6:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__19:
			case T__20:
			case T__21:
			case T__26:
			case T__28:
			case T__31:
			case T__34:
			case T__35:
			case T__37:
			case T__42:
			case T__43:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr5Context extends ParserRuleContext {
		public IdcallContext idcall() {
			return getRuleContext(IdcallContext.class,0);
		}
		public TerminalNode STRINGCONSTANT() { return getToken(exprParser.STRINGCONSTANT, 0); }
		public TerminalNode INTEGERCONSTANT() { return getToken(exprParser.INTEGERCONSTANT, 0); }
		public ExprnegationContext exprnegation() {
			return getRuleContext(ExprnegationContext.class,0);
		}
		public TypedeclarationContext typedeclaration() {
			return getRuleContext(TypedeclarationContext.class,0);
		}
		public ExprseqContext exprseq() {
			return getRuleContext(ExprseqContext.class,0);
		}
		public Expr5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr5; }
	}

	public final Expr5Context expr5() throws RecognitionException {
		Expr5Context _localctx = new Expr5Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_expr5);
		int _la;
		try {
			setState(176);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				idcall();
				}
				break;
			case STRINGCONSTANT:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				match(STRINGCONSTANT);
				}
				break;
			case INTEGERCONSTANT:
				enterOuterAlt(_localctx, 3);
				{
				setState(167);
				match(INTEGERCONSTANT);
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 4);
				{
				setState(168);
				match(T__24);
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				exprnegation();
				}
				break;
			case T__37:
				enterOuterAlt(_localctx, 6);
				{
				setState(170);
				typedeclaration();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 7);
				{
				setState(171);
				match(T__25);
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__21) | (1L << T__24) | (1L << T__25) | (1L << T__32) | (1L << T__37) | (1L << T__44) | (1L << INTEGERCONSTANT) | (1L << STRINGCONSTANT) | (1L << ID))) != 0)) {
					{
					setState(172);
					exprseq();
					}
				}

				setState(175);
				match(T__26);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public ExprlistContext exprlist() {
			return getRuleContext(ExprlistContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__25);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__21) | (1L << T__24) | (1L << T__25) | (1L << T__32) | (1L << T__37) | (1L << T__44) | (1L << INTEGERCONSTANT) | (1L << STRINGCONSTANT) | (1L << ID))) != 0)) {
				{
				setState(179);
				exprlist();
				}
			}

			setState(182);
			match(T__26);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesContext extends ParserRuleContext {
		public TypeidContext typeid() {
			return getRuleContext(TypeidContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public FieldlistContext fieldlist() {
			return getRuleContext(FieldlistContext.class,0);
		}
		public TypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types; }
	}

	public final TypesContext types() throws RecognitionException {
		TypesContext _localctx = new TypesContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_types);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			typeid();
			setState(196);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__27:
				{
				setState(185);
				match(T__27);
				setState(186);
				expr();
				setState(187);
				match(T__28);
				setState(188);
				match(T__29);
				setState(189);
				expr();
				}
				break;
			case T__30:
				{
				setState(191);
				match(T__30);
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(192);
					fieldlist();
					}
				}

				setState(195);
				match(T__31);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprnegationContext extends ParserRuleContext {
		public Expr5Context expr5() {
			return getRuleContext(Expr5Context.class,0);
		}
		public ExprnegationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprnegation; }
	}

	public final ExprnegationContext exprnegation() throws RecognitionException {
		ExprnegationContext _localctx = new ExprnegationContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_exprnegation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198);
			match(T__21);
			setState(199);
			expr5();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentaireContext extends ParserRuleContext {
		public List<TerminalNode> STRINGCONSTANT() { return getTokens(exprParser.STRINGCONSTANT); }
		public TerminalNode STRINGCONSTANT(int i) {
			return getToken(exprParser.STRINGCONSTANT, i);
		}
		public CommentaireContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentaire; }
	}
